[gd_scene load_steps=5 format=3 uid="uid://cniblhu062ir"]

[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="1_xd5ya"]
[ext_resource type="Script" path="res://scenes/popup/popup.gd" id="2_epsj8"]
[ext_resource type="Shortcut" uid="uid://moipqlm5cofg" path="res://resources/shortcuts/confirm.tres" id="3_2i100"]
[ext_resource type="Shortcut" uid="uid://krf4dorlu4cx" path="res://resources/shortcuts/cancel.tres" id="4_tx8jb"]

[node name="Popup" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("2_epsj8")

[node name="Overlay" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xd5ya")
theme_type_variation = &"PanelDimBackground"

[node name="PopupPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -81.5
offset_right = 134.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xd5ya")

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PopupMessage" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<MESSAGE>"
horizontal_alignment = 1

[node name="OkButton" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
shortcut = ExtResource("3_2i100")
text = "@OK"

[node name="ConfirmationButtons" type="HBoxContainer" parent="PopupPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ConfirmButton" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/ConfirmationButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_type_variation = &"ButtonRed"
shortcut = ExtResource("3_2i100")
text = "@CONFIRM"

[node name="CancelButton" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/ConfirmationButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
shortcut = ExtResource("4_tx8jb")
text = "@CANCEL"
